Fix spacing and sizes
I have used gimp to measure pixels and this is pretty accurate. Some icons are a bit weird because some have even sizes and some odd

--- a/home-manager/files/.config/waybar/style.css
+++ b/home-manager/files/.config/waybar/style.css
@@ -43,8 +43,21 @@ window#waybar {
 #tray {
   padding-top: 0;
   padding-bottom: 0;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
+#clock {
+  font-size: 15px;
+}
+
+#custom-notification {
+  padding-left: 2px;
+}
+
+#tray {
+  padding-top: 1px;
+  padding-right: 2px;
 }
 
 #clock,
@@ -52,7 +65,6 @@ window#waybar {
   font-weight: 800;
 }
 
-#window,
 #workspaces {
   margin-top: 0;
   margin-bottom: 0;
